--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Julia Set Viewer</title>
 	<link rel="stylesheet" href="static\css\style.css">
+    <link rel="icon" href="https://wartets.github.io/N-Body-Problem/image/browser-icon.png">
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/mathjs/11.8.0/math.js"></script>
 </head>
 <body>
