--- a/index.html
+++ b/index.html
@@ -3,6 +3,19 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<meta name="theme-color" content="#111111">
+	<meta name="msapplication-navbutton-color" content="#111111">
+	<meta name="apple-mobile-web-app-capable" content="yes">
+	<meta name="robots" content="index, follow">
+	<meta name="description" content="Dive into the mesmerizing world of Julia sets. Create custom fractal visuals in real-time with interactive controls, designed by Wartets (Colin Bossu). Explore stunning mathematical patterns with a simple, user-friendly interface.">
+	<meta name="keywords" content="Julia set, fractals, real-time rendering, interactive fractals, visual art, Colin Bossu, Wartets, mathematical patterns">
+
+	<!-- Open Graph Meta Tags -->
+	<meta property="og:title" content="Julia Sets Interactive Art | Wartets Fractal Visuals">
+	<meta property="og:description" content="Create stunning Julia set fractals in real-time with interactive controls. Explore and adjust mathematical patterns with ease in this unique creation by Wartets (Colin Bossu).">
+	<meta property="og:image" content="https://wartets.github.io/Wartets/img/JuilaSet-card.png">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://wartets.github.io/Julia-Set/">
 	<title>Julia Set Viewer</title>
 	<link rel="stylesheet" href="static\css\style.css">
     <link rel="icon" href="https://wartets.github.io/N-Body-Problem/image/browser-icon.png">
