Apple touch icon

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 	<meta name="theme-color" content="#111111">
 	<meta name="msapplication-navbutton-color" content="#111111">
 	<meta name="apple-mobile-web-app-capable" content="yes">
+	<link rel="apple-touch-icon" href="https://wartets.github.io/N-Body-Problem/image/browser-icon.png">
 	<meta name="robots" content="index, follow">
 	<meta name="description" content="Dive into the mesmerizing world of Julia sets. Create custom fractal visuals in real-time with interactive controls, designed by Wartets (Colin Bossu). Explore stunning mathematical patterns with a simple, user-friendly interface.">
 	<meta name="keywords" content="Julia set, fractals, real-time rendering, interactive fractals, visual art, Colin Bossu, Wartets, mathematical patterns">
